tests/baselines/reference/jsxFactoryQualifiedNameWithEs5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
index.tsx(1,8): error TS2882: Cannot find module or type declarations for side-effect import of './jsx'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== index.tsx (1 errors) ====
    import "./jsx";
           ~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of './jsx'.
    
    var skate: any;
    const React = { createElement: skate.h };
    
    class Component {
        renderCallback() {
            return <div>test</div>;
        }
    };